syntax = "proto3";

package review_service;

option go_package = "./proto";

service ReviewService {
    rpc SayHello(HelloRequest) returns (HelloReply);
    rpc UploadDiff(UploadDiffRequest) returns (UploadDiffReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message UploadDiffRequest {
    string diff = 1;
    string user = 2;
}

message UploadDiffReply {
    
}
